@@ -1,3 +1,6 @@
+DG-2009-03-19-0: Enhancem.:  Added test for issue 2759
+                 Review:     CR
+
 RD-2009-03-18-0: Bugfix:     - fixed JSV tests on fast linux hosts and with mixed
                                architectures
                              - suspressed features supported logging for exclusive
